--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -23,19 +23,25 @@
             </div>
         </div>
         <div class="row">
-            <div class="col mt-4 mb-4">
-                <h5 class="page-sub-header text-white">There are {{ live_listings | length }} listings live on the site.</h5>
-                {% if require_approval %}
-                <h5 class="page-sub-header text-white">You have {{ pending_approval_listings | length }} listings that are pending approval.</h5>
-                <a id="back-to-approval-button" href="{% url 'approve_conversions' %}" class="mt-2 btn btn-outline-black rounded-2 text-white"><i class="ml-1 fa fa-chevron-left mr-2"></i> Go To Approvals </a>
+            <div class="col mb-4">
+                <div class="mb-3 text-center text-md-left">
+                    <h2 class="logo-font page-header text-white mt-5 text-center text-md-left">View Listings</h2>
+                    <a id="view-active-listings-button" href="{% url 'manage_conversions' %}" class="{% if not approval_page %}active-category {% endif %}p-2 mt-2 badge bg-white text-black rounded-2 border border-light"></i>Active Listings</a>
+                    <a id="back-to-approval-button" href="{% url 'manage_conversions' %}?approve=True" class="{% if approval_page %}active-category {% endif %}p-2 mt-2 badge bg-white text-black rounded-2 border border-light ml-2"></i>Awaiting Approval</a>
+                </div>
+                <h5 class="page-sub-header text-white text-center text-md-left">There are {{ live_listings }} listings live on the site.</h5>
+                {% if require_approval > 0 %}
+                <h5 class="page-sub-header text-white text-center text-md-left">You have {{ require_approval }} listing{% if require_approval > 1%}s that are{% endif %} pending approval.</h5>
                 {% else %}
-                <h5 class="page-sub-header text-white">There are no listings awating approval.</h5>
+                <h5 class="page-sub-header text-white text-center text-md-left">There are no listings awating approval.</h5>
                 {% endif %}
+                
+
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-10">
-                {% for conversion in live_listings %}
+                {% for conversion in conversions %}
                         <div class="card no-border mb-4">
                             <div class="card-body border-white text-white">
                                 <div class="row">
@@ -54,7 +60,11 @@
                                 <a href="{% url 'edit_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
                                 <a href="{% url 'delete_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
                                 <a class="ml-2 btn btn-outline-black rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
-                                <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                                {% if conversion.is_active %}
+                                    <a href="{% url 'delist_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Delist Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                                {% else %}
+                                    <a href="{% url 'approve_conversion' conversion.id %}" class="ml-2 mb-2 btn btn-outline-black rounded-2 text-white">Approve Listing <i class="ml-1 fa fa-minus-circle"></i></a>
+                                {% endif %}
                                 <p class="mt-3 text-white large-font contact-info-row d-none">{{ conversion.name }} - {{ conversion.phone_number }}</p>
                                 <p class="mt-3 text-white large-font contact-info-row d-none">Email - {{ conversion.user.user.email }}</p>
                             </div>
