--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -51,6 +51,20 @@
                         <p class="text-white mt-3 text-center text-md-left">
                             {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
                         </p>
+                        <div id="product-search-bar">
+                        <form method="GET" action="{% url 'products' %}">
+                            <div class="input-group w-100">
+                                <input class="form-control border border-muted rounded-3" type="text" name="q" placeholder="Search products">
+                                <div class="input-group-append">
+                                    <button class="form-control btn btn-black border-muted rounded-3" type="submit">
+                                        <span class="icon">
+                                            <i class="fas fa-search"></i>
+                                        </span>
+                                    </button>
+                                </div>
+                            </div>
+                        </form>
+                        </div>
                         <hr class="text-white">
                     </div>
                 </div>
