--- a/static/css/base.css
+++ b/static/css/base.css
@@ -579,6 +579,24 @@ a.category-badge > span.badge:hover {
     cursor: pointer;
 }
 
+#product-search-bar {
+    width: 50%;
+}
+
+@media (max-width:1199px){
+    #product-search-bar {
+    width: 75%;
+    }
+}
+
+@media (max-width:767px){
+    #product-search-bar {
+    margin: 0 auto;
+    width: 50%;
+    }
+}
+
+
 /* ------ All conversions page ------ */
 
 .img-conversions-page {
