--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -45,7 +45,7 @@
                     {% if request.user.is_superuser %}
                         <small class="ml-3">
                             <a class="br-1 p-2 bg-white" href="{% url 'edit_product' product.id %}">Edit</a>
-                            <a class="br-1 ml-1 p-2 bg-white text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                            <a onclick="document.getElementById('id01').style.display='block'" class="br-1 ml-1 p-2 bg-white text-danger" >Delete</a>
                         </small>
                     {% endif %}
                     <p class="mt-3 text-white">{{ product.description }}</p>
@@ -151,6 +151,23 @@
                     </form>
                 </div>
             </div>
+
+            <!--- Delete Product Modal --->
+            <div id="id01" class="modal">
+                <span onclick="document.getElementById('id01').style.display='none'" class="close-modal close" title="Close Modal">&times;</span>
+                <form class="modal-content" action="/action_page.php">
+                    <div class="container container-modal">
+                    <h1>Delete Product</h1>
+                    <p>Are you sure you want to delete {{ product.name }}?</p>
+
+                    <div class="clearfix">
+                        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn button-modal">Cancel</button>
+                        <a href="{% url 'delete_product' product.id %}"><button type="button" class="deletebtn button-modal">Delete</button></a>
+                    </div>
+                    </div>
+                </form>
+            </div>
+
         </div>
     </div>
 {% endblock %}
