--- a/static/css/base.css
+++ b/static/css/base.css
@@ -455,6 +455,104 @@ a.dropdown-item {
 }
 
 
+/* Delete Modal  - https://www.w3schools.com/howto/howto_css_delete_modal.asp  */
+
+* {box-sizing: border-box}
+
+/* Set a style for all buttons */
+.button-modal {
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.button-modal:hover {
+  opacity:1;
+}
+
+/* Float cancel and delete buttons and add an equal width */
+.cancelbtn, .deletebtn {
+  float: left;
+  width: 50%;
+}
+
+/* Add a color to the cancel button */
+.cancelbtn {
+  background-color: #ccc;
+  color: black;
+}
+
+/* Add a color to the delete button */
+.deletebtn {
+  background-color: #f44336;
+}
+
+/* Add padding and center-align text to the container */
+.container-modal {
+  padding: 16px;
+  text-align: center;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 4; /* Sit on top */
+  left: 0;
+  top: 20;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: #474e5d;
+  padding-top: 30vh;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+
+/* The Modal Close Button (x) */
+
+.close-modal {
+  position: absolute;
+  right: 35px;
+  top: 15px;
+  font-size: 40px;
+  font-weight: bold;
+  color: #f1f1f1;
+}
+
+.close:hover,
+.close:focus {
+  color: #f44336;
+  cursor: pointer;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and delete button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .deletebtn {
+    width: 100%;
+  }
+}
+
+
 /* Home Page */
 
 #home-title {
@@ -561,6 +659,10 @@ a.category-badge > span.badge:hover {
     color: black !important;
 }
 
+a.br-1.p-2.ml-1.bg-white.text-danger.border-muted {
+    cursor: pointer;
+}
+
 .active-category {
     font-size: 1.1rem !important;
 }
@@ -594,6 +696,12 @@ a.category-badge > span.badge:hover {
     margin: 0 auto;
     width: 50%;
     }
+}
+
+/* Product Detail Page  */
+
+a.br-1.ml-1.p-2.bg-white.text-danger {
+    cursor: pointer;
 }
 
 
