--- a/conversions/templates/conversions/manage_conversions.html
+++ b/conversions/templates/conversions/manage_conversions.html
@@ -56,7 +56,7 @@
                                 </div>
                             </div>
                             <div class="card-footer text-center text-lg-left">
-                                <a href="{% url 'conversion_detail' conversion.id %}" class="btn btn-outline-black rounded-2 text-white mb-2">View Details</a>
+                                <a href="{% url 'conversion_detail' conversion.id %}?from_admin=True" class="btn btn-outline-black rounded-2 text-white mb-2">View Details</a>
                                 <a href="{% url 'edit_conversion' conversion.id %}" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Edit Conversion</a>
                                 <a onclick="document.getElementById('id{{ forloop.counter }}').style.display='block'" class="btn btn-outline-black rounded-2 text-white ml-2 mb-2">Delete Conversion</a>
                                 <a class="ml-2 btn btn-outline-black rounded-2 text-white mb-2 contact-info-button">Contact Seller</a>
