--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -16,7 +16,7 @@
             </div>
         </li>
 
-        <li class="nav-item nav-link nav-link-fade-up dropdown">
+        <li class="nav-item nav-link nav-link-fade-up nav-link-sell-conversion dropdown">
             <a class="logo-font font-weight-bold nav-link mr-3 text-white" href="#" id="sell-conversion-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 SELL A CONVERSION
             </a>
