Add error handlers, update views and templates to support these

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -188,7 +188,7 @@
                     </div>
                 {% else %}
                     <p class="lead mb-5 text-white text-md-left text-center">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-2 btn-lg">
+                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-2 mt-2 btn-lg">
                         <span class="icon">
                             <i class="fas fa-chevron-left"></i>
                         </span>
