Update error handlings templates contents

--- a/home/templates/home/403.html
+++ b/home/templates/home/403.html
@@ -13,9 +13,10 @@
     <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col mt-4 mb-5 d-flex flex-column align-items-center">
-                <h2 class="text-white text-center mt-3">Permission Denied, sorry! Please try again, or head back to the homepage with the button below.</h2>
-                <a href="{% url 'home' %}"><button class="btn btn-outline-black rounded-2 btn-lg">BACK HOME</button></a>
+            <div class="col mt-5 mb-5 d-flex flex-column align-items-center">
+                <h2 class="text-white text-center mt-5">Error 403: Permission Denied, sorry! Please try again, or head back to the homepage with the button below.</h2>
+                <h3 class="text-white text-center mt-3">If the problem persists, please get in touch with us at : wildmileconversions@gmail.com</h3>
+                <a class="mt-3" href="{% url 'home' %}"><button class="btn btn-outline-black rounded-2 btn-lg">BACK HOME</button></a>
             </div>
         </div>
     </div>
