Update image form message to users

--- a/conversions/templates/conversions/edit_conversion.html
+++ b/conversions/templates/conversions/edit_conversion.html
@@ -105,6 +105,7 @@
                     {{ form.conversion_description | as_crispy_field }}
                     <h5 class="mt-4">Image Upload</h5>
                     <h6>You may add an additional 3 images each time you edit a listing. We don't currently enforce a limit on this.</h6>
+                    <h6>Please note that you can't delete and update an image, please conduct one of these actions at a time to prevent form error.</h6>
                     <hr class="border-top-dark">
                     <!-- Image Upload Formset -->
                     {{ form.main_image| as_crispy_field }}
