--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -13,8 +13,10 @@
 <div class="overlay"></div>
     <div class="container">
         <div class="row">
-            <div class="col mt-2"> 
+            <div class="col mt-5"> 
                 <h2 class="logo-font mt-5 mb-4 text-white text-lg-left text-center">CHOOSE A SERVICE LEVEL</h2>
+                <h4 class="mt-5 mb-4 text-white text-lg-left text-center">We are currently only offerring a free listing token. Other paid tokens are currently disabled.</h4>
+                <h5 class="mt-3 mb-4 text-white text-lg-left text-center">Please note: to checkout you will need to have an 'inactive' listing in your profile. You can get started and create a listing - <a href="{% url 'add_conversion' %}">HERE</a> </h5>
                 <hr>
             </div>
         </div>
@@ -49,7 +51,7 @@
             <div class="col-12 col-lg-4 mb-5">
                 <div class="card no-border">
                     <div class="card-body bg-cream text-center br-2-top">
-                        <h1 class="mb-4">QUARTER</h1>
+                        <h1 class="mb-4">QUARTERLY</h1>
                         <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                     </div>
                     <div class="card-footer text-center text-white br-2-bottom">
