--- a/templates/allauth/account/password_reset_done.html
+++ b/templates/allauth/account/password_reset_done.html
@@ -7,7 +7,7 @@
 
 {% block inner_content %}
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Password Reset" %}</h2>
+    <h2 class="logo-font mt-5 text-white mb-4">{% trans "Password Reset" %}</h2>
     <hr>
     
     {% if user.is_authenticated %}
