--- a/templates/allauth/account/password_reset_from_key_done.html
+++ b/templates/allauth/account/password_reset_from_key_done.html
@@ -5,7 +5,7 @@
 
 {% block inner_content %}
     <hr>
-    <h2 class="logo-font mb-4">{% trans "Change Password" %}</h2>
+    <h2 class="logo-font mt-5 text-white mb-4">{% trans "Change Password" %}</h2>
     <hr>
     <p>{% trans 'Your password is now changed.' %}</p>
 {% endblock %}
