--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,16 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block page_header %}
-    <div class="header-container container">
-        <div class="row">
-            <div class="col">
-                
-            </div>
+<div class="header-container container">
+    <div class="row">
+        <div class="col">
         </div>
     </div>
+</div>
 {% endblock %}
-
 {% block content %}
 <!-- Site Entry Overlay -->
 <div id="overlay-site-entry">
@@ -24,7 +21,6 @@
         </div>
     </div>
 </div>
-
 <!-- Main Page content -->
 <div class="container h-100">
     <div class="row h-100">
@@ -35,22 +31,20 @@
             <h3 id="home-title-caption" class="text-center">A platform to buy and sell unique <br class="responsive">converted vehicles</h3>
             <div class="my-5">
                 <h4 class="text-center">
-                    <a href="{% url 'conversions' %}" id="home-title-button" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white bg-light-green border-muted">See Conversions</a></h4>
+                    <a href="{% url 'conversions' %}" id="home-title-button" class="see-conversions-button btn btn-lg rounded-2 text-uppercase text-white bg-light-green border-muted">See Conversions</a>
+                </h4>
             </div>
         </div>
     </div>
 </div>
 {% endblock %}
-
 {% block postloadjs %}
-
-<!---- Site entry overlay JavaScript ----->
+<!-- Site entry overlay JavaScript -->
 <script>
-
     $('#overlay-site-entry').height($(document).height());
-
+    
     $(document).ready(function(){
-
+    
         // Check session storage to show overlay if first visit to site in browser tab //
         if ( ! sessionStorage.getItem( 'doNotShow' ) ) {
             sessionStorage.setItem( 'doNotShow', true );
@@ -65,5 +59,4 @@
         });
     });
 </script>
-
 {% endblock %}
