--- a/profiles/templates/profiles/saved_listings.html
+++ b/profiles/templates/profiles/saved_listings.html
@@ -46,23 +46,15 @@
                     </div>
                     <div class="card-footer card-footer-profile-listing text-center">
                         {% if listing.conversion.is_active %}
-                        <a href="{% url 'conversion_detail' listing.conversion.id %}">
-                            <button class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button">View Listing</button>
-                        </a>
-                        <a href="{% url 'remove_saved_listing' listing.conversion.id %}">
-                            <button class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button">Remove Listing</button>
-                        </a>
-                        <hr class="border-muted">
+                            <a class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button" href="{% url 'conversion_detail' listing.conversion.id %}">View Listing</a>
+                            <a class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button" href="{% url 'remove_saved_listing' listing.conversion.id %}">Remove Listing</a>
+                            <hr class="border-muted">
                         {% else %}
-                        <a href="#">
-                            <button class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button"><strike>View Listing</strike></button>
-                        </a>
-                        <a href="{% url 'remove_saved_listing' listing.conversion.id %}">
-                            <button class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button">Remove Listing</button>
-                        </a>
-                        <hr class="border-muted">
-                        <p class="text-danger mt-3 mb-1">Sorry this listing is no longer live on the site</p>
-                        <hr class="border-muted">
+                            <a class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button" href="#"><s>View Listing</s></a>
+                            <a class="btn border-dark btn-outline-black border-white mt-1 text-white profile-saved-listing-button" href="{% url 'remove_saved_listing' listing.conversion.id %}">Remove Listing</a>
+                            <hr class="border-muted">
+                            <p class="text-danger mt-3 mb-1">Sorry this listing is no longer live on the site</p>
+                            <hr class="border-muted">
                         {% endif %}
                     </div>
                 </div>
