--- a/products/templates/products/listing_levels.html
+++ b/products/templates/products/listing_levels.html
@@ -29,12 +29,11 @@
                             <img class="img-fluid br-1" src="{{ MEDIA_URL }}rob-hayman-OxPtEsYUNAc-unsplash.jpg" alt="">
                         </div>
                         <div class="card-footer text-center text-white br-2-bottom">
-                            <p class="larger-font"><strike>£7.99 for 30 days.</strike></p>
+                            <p class="larger-font"><s>£7.99 for 30 days.</s></p>
                             <p class="large-font mb-1">(£0.00 promotion will run until the end of July)</p>
                         </div>   
                     </div>
                 </a>
-               
             </div>
             <div class="col-12 col-lg-4 mb-5">
                 <div class="card no-border">
@@ -57,10 +56,8 @@
                     <div class="card-footer text-center text-white br-2-bottom">
                         <p class="larger-font mt-4 mb-4">£19.99 for 90 days.</p> 
                     </div>
-                     
                 </div>
             </div>
-        </div>
         </div>
     </div>
 {% endblock %}
