--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -66,62 +66,58 @@
                                     </div>
                                 {% endif %}
                                 {% if product.sku != "12345678" %}
-                                <div class="col-12">
-                                    <p class="mt-3 text-white"><strong>Quantity:</strong></p>
-                                    <div class="form-group w-50">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <button class="decrement-qty btn btn-light-green rounded-2"
-                                                    data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                                    <span class="icon">
-                                                        <i class="fas fa-minus"></i>
-                                                    </span>
-                                                </button>
-                                            </div>
-                                            <input class="form-control qty_input" type="number"
-                                                name="quantity" value="1" min="1" max="99"
-                                                data-item_id="{{ product.id }}"
-                                                id="id_qty_{{ product.id }}">
-                                            <div class="input-group-append">
-                                                <button class="increment-qty btn btn-light-green rounded-2"
-                                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                                    <span class="icon">
-                                                        <i class="fas fa-plus"></i>
-                                                    </span>
-                                                </button>
+                                    <div class="col-12">
+                                        <p class="mt-3 text-white"><strong>Quantity:</strong></p>
+                                        <div class="form-group w-50">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend">
+                                                    <button class="decrement-qty btn btn-light-green rounded-2"
+                                                        data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                        <span class="icon">
+                                                            <i class="fas fa-minus"></i>
+                                                        </span>
+                                                    </button>
+                                                </div>
+                                                <input class="form-control qty_input" type="number"
+                                                    name="quantity" value="1" min="1" max="99"
+                                                    data-item_id="{{ product.id }}"
+                                                    id="id_qty_{{ product.id }}">
+                                                <div class="input-group-append">
+                                                    <button class="increment-qty btn btn-light-green rounded-2"
+                                                        data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                        <span class="icon">
+                                                            <i class="fas fa-plus"></i>
+                                                        </span>
+                                                    </button>
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
                                 {% else %}
-                                <div class="col-12">
-                                    <p class="mt-3 text-white"><strong>Select Listing:</strong></p>
-                                    <select class="form-control rounded-0 w-50" name="listing_uuid" id="id_listing_uuid">
-                                        {% if not my_listings %}
-                                        <option value="empty">No listings to approve</option>
-                                        {% endif %}
-                                        {% for listing in my_listings %}
-                                        <option value="{{ listing.unique_ref }}">{{ listing.listing_title }}</option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                                <div class="col-12">
-                                    <p class="mt-3 text-white"><strong>Quantity:</strong></p>
-                                    <div class="form-group w-50">
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                
-                                            </div>
-                                            <input class="form-control qty_input" type="number"
-                                                name="quantity" value="1" min="1" max="1"
-                                                data-item_id="{{ product.id }}"
-                                                id="id_qty_{{ product.id }}">
-                                            <div class="input-group-append">
-                                                
+                                    <div class="col-12">
+                                        <p class="mt-3 text-white"><strong>Select Listing:</strong></p>
+                                        <select class="form-control rounded-0 w-50" name="listing_uuid" id="id_listing_uuid">
+                                            {% if not my_listings %}
+                                                <option value="empty">No listings to approve</option>
+                                            {% endif %}
+                                            {% for listing in my_listings %}
+                                                <option value="{{ listing.unique_ref }}">{{ listing.listing_title }}</option>
+                                            {% endfor %}
+                                        </select>
+                                    </div>
+                                    <div class="col-12">
+                                        <p class="mt-3 text-white"><strong>Quantity:</strong></p>
+                                        <div class="form-group w-50">
+                                            <div class="input-group">
+                                                <div class="input-group-prepend"></div>
+                                                <input class="form-control qty_input" type="number"
+                                                    name="quantity" value="1" min="1" max="1"
+                                                    data-item_id="{{ product.id }}"
+                                                    id="id_qty_{{ product.id }}">
+                                                <div class="input-group-append"></div>
                                             </div>
                                         </div>
                                     </div>
-                                </div>
                                 {% endif %}
                                     <div class="col{% if s %}-12 mt-2{% endif %}">
                                         {% if from_listing_fees_page %}
@@ -140,9 +136,9 @@
                                             </a>
                                         {% endif %}
                                         {% if product.sku == '12345678' %}
-                                        <input type="submit" class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
+                                            <input type="submit" class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase mt-5" value="Add to Bag" {% if not my_listings %}disabled{% endif %}>
                                         {% else %}
-                                        <input type="submit" class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase mt-5" value="Add to Bag">
+                                            <input type="submit" class="btn btn-light-green btn-outline-muted rounded-2 text-uppercase mt-5" value="Add to Bag">
                                         {% endif %}
                                     </div>
                                     <input type="hidden" name="redirect_url" value="{{ request.path }}">
