--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -73,17 +73,15 @@
                         <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
                             <div class="card h-100 border-0">
                                 {% if product.image %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                </a>
+                                    <a href="{% url 'product_detail' product.id %}">
+                                        <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    </a>
                                 {% else %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                                </a>
+                                    <a href="{% url 'product_detail' product.id %}">
+                                        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                    </a>
                                 {% endif %}
-                                <div class="card-body pb-0">
-                                    
-                                </div>
+                                <div class="card-body pb-0"></div>
                                 <div class="card-footer bg-light-green br-1 pt-0 border-0 text-left">
                                     <div class="row">
                                         <div class="col">
@@ -139,7 +137,6 @@
                                 <div class="container container-modal">
                                 <h1>Delete Product</h1>
                                 <p>Are you sure you want to delete {{ product.name }}?</p>
-
                                 <div class="clearfix">
                                     <button type="button" onclick="document.getElementById('id{{ forloop.counter }}').style.display='none'" class="cancelbtn button-modal">Cancel</button>
                                     <a href="{% url 'delete_product' product.id %}"><button type="button" class="deletebtn button-modal">Delete</button></a>
